Bug fix Skills section unaligned icon/text on small screens.

--- a/portfolio/src/components/skills/skills.scss
+++ b/portfolio/src/components/skills/skills.scss
@@ -44,3 +44,8 @@
 	color:green;
 	margin-right: 10px;
 }
+
+.align-Item-Side-By-Side {
+	display:flex;
+	align-items: center;
+}
